# DigSig

./: .gitignore  DigAna.cc  DigAna.h  DigSig.cc  DigSig.h  Makefile.am  README.md  RunningStats.cc  RunningStats.h  autogen.sh  configure.ac  configure.in  digsigLinkDef.h
DRS4/: drs4_toroot.C  drs4tocsv.C  evtdisplay.C  plot_amplitude.C  run_ana_drs4.C  runana.sh
DT5742/: countevents.sh  dt5742.C  dt5742.h  dt5742_toroot.C  dt5742_toroot.cmd  dt5742_toroot.job  fit_dt5742.C  plotall.C  run_dt5742_toroot.C  zero.sh
MBD/: mbd_toroot.C
V1742PRDF/: Makefile.am  README.txt  caen_calib.cc  configure.ac  v1742_toroot.C  v1742prdf.cc  v1742prdf.h  v1742prdfLinkDef.h
V1742PRDF/Corrections/: 0_gr0_cell.txt  0_gr1_cell.txt  0_gr1_nsample.txt  0_gr1_time.txt  0_gr2_cell.txt  0_gr2_time.txt  0_gr3_time.txt  1_gr0_nsample.txt  1_gr0_time.txt  1_gr1_cell.txt  1_gr1_nsample.txt  1_gr3_cell.txt  1_gr3_nsample.txt  1_gr3_time.txt  2_gr0_cell.txt  2_gr1_time.txt  2_gr2_cell.txt  2_gr2_nsample.txt  2_gr2_time.txt  3_gr0_nsample.txt  3_gr0_time.txt  3_gr2_nsample.txt  3_gr3_cell.txt  3_gr3_nsample.txt  get_corrections.sh
macros/: cal_bbc_mip.C  calcintegral.sh  calcped.sh  digsig_bbnew_calctimes.C  digsig_calc_mbd.C  digsig_calcintegral.C  digsig_calcped.C  digsig_calctimes.C  digsig_evtdisplay.C  digsig_gettmax.C  digsig_hitdist.C  digsig_maketemplate.C  digsig_spectrum.C  digsig_tomat.C  evtdisplay.sh  get_runstr.h  hitdist.sh  plot_mbdtimes.C  plot_shapes.C  plot_times.C  plot_uniformity.C  root2mbd.sh  runinteg.sh  spectrum.sh
macros/mbd/: analaserscan.C  plot_times.C
prdf2root/: Makefile.am  README.md  autogen.sh  configure.ac  digsig_prdf.cc  digsig_prdf.h  digsig_prdfLinkDef.h
prdf2root/macros/: cal_bbc_mip.C  prdf2root.C  prdf2root.sh
